# ozbargain-notify

./: .gitignore  README.md  privacy-policy.md  releasing.md  terms-and-conditions.md
app/: .gitignore  build.gradle  config.xml  ionic.config.json  package.json
app/hooks/after_prepare/: 011_add_notification_icons.js
app/plugins/: android.json
app/src/androidTest/java/me/samlewis/ozbargainnotify/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/me/samlewis/ozbargainnotify/: App.java  DealsListingActivity.java  PushReceiver.java  SettingsActivity.java
app/src/main/res/layout/: activity_deals_listing.xml  activity_settings.xml
app/src/main/res/menu/: menu_deals_listing.xml
app/src/main/res/values/: strings.xml
app/www/: index.html
app/www/css/: style.css
app/www/js/: app.js  controllers.js  services.js
app/www/templates/: settings.html
obns/src/: deal_service.rs  lib.rs  notifications.rs
server/: Cargo.toml  deal_scraper.js  deploy.md  handler.js  keys.js  rustfmt.toml  serverless.yml
server/src/: lib.rs  notifications.rs  ozbargain.rs  persist.rs
