[package]
name = "obns"
version = "0.1.0"
edition = "2021"

[lints.clippy]
missing_errors_doc = "allow"
no_effect_underscore_binding = "allow"
doc_markdown = "allow"
pedantic = { level = "deny", priority = -1 }

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["cloudwatch_events"] }

lambda_runtime = "0.13.0"

anyhow = "1.0.87"
fcm = { git = "https://github.com/rj76/fcm-rust.git" }
lazy_static = "1.5.0"
log = "0.4"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["native-tls-vendored"] }
rusoto_core = { version = "0.47.0", default-features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.47.0", default-features = false, features = ["rustls"] }
scraper = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_dynamodb = "0.9.0"
serde_json = "1.0.128"
simple_logger = "5.0.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
